--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Books</title>
+    <link rel="stylesheet" href="styles/index.css">
+
 </head>
 <body>
     <header>
@@ -19,12 +21,13 @@
 </ol>
         </nav>
     </header>
+
     <main>
         <section>
-<p> A reader lives a thousand lives before she dies.</p>
+<p class="quote"> A reader lives a thousand lives before she dies.</p>
         </section>
         <section id="second-paragraph">
-<p>"When I look back, I am so impressed again 
+<p class="quote2">"When I look back, I am so impressed again 
     with the life-giving power of literature. 
     If I were a young person today, 
     trying to gain a sense of myself in the world,
@@ -32,13 +35,15 @@
     as I did when I was young." – Maya Angelou</p>
         </section>
         <section>
-<p>"It wasn't until I 
+<p class="qoute3" 
+>"It wasn't until I 
     started reading and found books they wouldn't 
     let us read in school that I discovered you 
     could be insane and happy and have a good life 
     without being like everybody else." – John Waters</p>
     <img src="images/book.jpg" alt="books" title="aesthetic books"></section>
     </main>
+
     <footer>
         <h4>good bye!</h4>
     </footer>
